# project_manager

./: CMakeLists.txt  README.md
include/: common.hpp  project.hpp  project_manager.hpp  project_manager_gui.hpp  save_file_manager.hpp  ugv_gui.hpp  utilities.hpp
include/glad/: glad.h
src/: glad.c  main.cpp  project_manager.cpp  project_manager_gui.cpp  ugv_gui.cpp
